<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="your_sales">Your sales:\u0020 </string>
    <string name="there_was_no_sale">There was no sale</string>
    <string name="order_more">Order more</string>
    <string name="merchant_price">Merchant Price: </string>
    <string name="price">Price:\u0020 </string>
    <string name="quantity">Quantity:\u0020</string>
    <string name="description">Description</string>
    <string name="product_name">Product name</string>
    <string name="save">Save</string>
    <string name="emptyView_text">Push the nose to add product</string>
    <string name="pop_up_empty_text">Nothing to show</string>
    <string name="sale_button_text">Sale</string>
    <string name="toast_valid_name">You have to give a valid name</string>
    <string name="toast_valid_quantity">You have to give a valid quantity</string>
    <string name="toast_valid_price">You have to give a valid price</string>
    <string name="toast_valid_mPrice">You have to give a valid merchant Price</string>
    <string name="toast_succes_insert">Insert was success</string>
    <string name="toast_not_succes_insert">Insert was not success</string>
    <string name="toast_unable_image_open">Unable to open image</string>
    <string name="dialog_message_unsaved">You have unsaved changes</string>
    <string name="dialog_discard_button">Discard</string>
    <string name="dialog_editing_button">Keep editing</string>
    <string name="dialog_message_delete">Delete product?</string>
    <string name="diaog_button_delete">Delete</string>
    <string name="dialog_button_no">No</string>
    <string name="in_stock">In stock:\u0020 </string>
    <string name="going_out_of_stock">You are going out of stock!!</string>
    <string name="pop_up_header">Description of:\u0020 </string>
    <string name="toast_all_item_deleted">All items deleted</string>
    <string name="summary_profit">Your profit summary is:\u0020 </string>
    <string name="summary_sold">Number of sold products:\u0020 </string>
    <string name="summary_sale_time">Time of Sale:\u0020 </string>
    <string name="summary_your_proft">Your profit on this product:\u0020 </string>
    <string name="Valid_phone_number">You have to give a valid Phone number</string>
    <string name="valid_phone_number_1">You have to give a valid Phone number</string>
    <string name="valid_supplier_name">You have to give a valid supplier name</string>
    <string name="supplier_phone_text_view">Supplier Phone Number</string>
    <string name="supplier_name_textview">Supplier Name</string>
    <string name="call_suplier">Call Supplier</string>
    <string name="supply_description">Supply:</string>
    <string name="decrease_supply_button">Decrease Supply</string>
</resources>
