<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/editor_activity_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/product_name_text"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:hint="@string/product_name" />

        <EditText
            android:id="@+id/product_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/description"
            android:maxLines="4"
            android:minLines="2" />

        <EditText
            android:id="@+id/product_quantity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/quantity"
            android:inputType="number" />

        <EditText
        android:id="@+id/product_price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/price"
        android:inputType="number" />

        <EditText
            android:id="@+id/product_mPrice_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/merchant_price"
            android:inputType="number" />

        <EditText
            android:id="@+id/product_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/supplier_name_textview" />

        <EditText
            android:id="@+id/product_supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/supplier_phone_text_view" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:onClick="uploadImage"
            android:src="@drawable/greyhound"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="saveProduct"
            android:background="@drawable/button_bg"
            android:text="@string/save"/>

    </LinearLayout>


</LinearLayout>
