<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/name_descripton_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Product Name"
            android:layout_margin="10dp"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <TextView
            android:id="@+id/detail_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CDDC39"
            android:padding="15dp"
            android:textColor="@android:color/white"
            tools:text="@string/pop_up_empty_text"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/price_descripton_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Price"
            style="@style/DescriptionTextTehme" />

        <TextView
            android:id="@+id/quantity_descripton_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Quantity"
            style="@style/DescriptionTextTehme" />

        <TextView
            android:id="@+id/sName_descripton_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Supplier Name"
            style="@style/DescriptionTextTehme" />

        <TextView
            android:id="@+id/sPhoneNumber_descripton_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Supplier Phone Number"
            style="@style/DescriptionTextTehme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Delete Product"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_light"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/increase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Increase Supply"
                android:layout_margin="5dp"
                android:background="#CDDC39"
                android:textColor="@android:color/white"
                />

            <Button
                android:id="@+id/decrase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decrease_supply_button"
                android:layout_margin="5dp"
                android:background="#CDDC39"
                android:textColor="@android:color/white"
                />


        </LinearLayout>

        <Button
            android:id="@+id/order_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_more"
            android:background="#CDDC39"
            android:textColor="@android:color/white"

            />



    </LinearLayout>

</ScrollView>